@@ -1,4 +1,5 @@
 package helpers;
+
 import dev.aikido.agent_api.background.Endpoint;
 import dev.aikido.agent_api.helpers.IPAccessController;
 import org.junit.jupiter.api.Test;
@@ -6,16 +7,16 @@ import org.junit.jupiter.api.Test;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class IPAccessControllerTest {
     private Endpoint genEndpoint(List<String> allowedIPAddresses) {
         return new Endpoint(
-                /* method */ "POST", /* route */ "/posts/:id",
-                /* rlm params */ 0, 0,
-                /* Allowed IPs */ allowedIPAddresses, /* graphql */ false,
-                /* forceProtectionOff */ true, /* rlm */ false
+            /* method */ "POST", /* route */ "/posts/:id",
+            /* rlm params */ 0, 0,
+            /* Allowed IPs */ allowedIPAddresses, /* graphql */ false,
+            /* forceProtectionOff */ true, /* rlm */ false
         );
     }
 
@@ -77,8 +78,8 @@ public class IPAccessControllerTest {
     @Test
     public void testChecksEveryMatchingEndpoint() {
         List<Endpoint> endpoints = List.of(
-                genEndpoint(List.of("3.4.5.6")),
-                genEndpoint(List.of("1.2.3.4"))
+            genEndpoint(List.of("3.4.5.6")),
+            genEndpoint(List.of("1.2.3.4"))
         );
         assertFalse(IPAccessController.ipAllowedToAccessRoute("3.4.5.6", endpoints));
     }
@@ -86,10 +87,10 @@ public class IPAccessControllerTest {
     @Test
     public void testIfAllowedIpsIsEmptyOrBroken() {
         List<Endpoint> endpoints = List.of(
-                genEndpoint(Collections.emptyList()),
-                genEndpoint(Collections.emptyList()), // Broken configuration
-                genEndpoint(null), // Broken configuration
-                genEndpoint(List.of("1.2.3.4"))
+            genEndpoint(Collections.emptyList()),
+            genEndpoint(Collections.emptyList()), // Broken configuration
+            genEndpoint(null), // Broken configuration
+            genEndpoint(List.of("1.2.3.4"))
         );
 
         assertTrue(IPAccessController.ipAllowedToAccessRoute("1.2.3.4", endpoints));
